--- a/source/localisation/tradenodes_l_english.yml
+++ b/source/localisation/tradenodes_l_english.yml
@@ -98,8 +98,8 @@
  TN_INCOMING_VALUE:0 "流入交易額："
  TN_SEND_MERCHANT:0 "商人を派遣"
  TN_MERCHANT_PRESENT:0 "$NAME$ ($TYPE$)"
- TRADE_RETENTION:0 "交易力の§Y$PART$§W%が§Y$VAL$§W¤をとどめています。"
- TRADE_PULL:0 "交易力の§Y$PART$§W%が§Y$VAL$§W¤を流出させています。"
+ TRADE_RETENTION:0 "交易力の§Y$PART$§W%によって§Y$VAL$§W¤がこのノードに留まっています。"
+ TRADE_PULL:0 "交易力の§Y$PART$§W%によって§Y$VAL$§W¤が流出しています。"
  TRADE_POWER_TAKE_PART:0 "§Y$COUNTRY$§Wは交易から徴収する国々の中で§Y$PART$%§Wの交易力を有しています。"
  TRADER_ALLREADY_THERE:0 "任意のノードで許可される商人は一人だけです。"
  TRADER_IN_RANGE:0 "範囲内にしてください（現在範囲：§Y$CURR$§W 最大範囲：§Y$MAX$§W）"
