Save/Update files [ci skip]

--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1873,8 +1873,8 @@
  desc_sexist_revolution:0 "この国に住む女性たちは、政府に裏切られたと感じている。"
  shinto_events.59.t:0 "新しい伝統"
  shinto_events.59.d:0 "我々の統治者の多くは儒教の哲学に従っており、その信念は急速に我が国の統治に定着している。神道は今でも政権全体で広く実践されているが、多くの人々は、宗教は個人が決定する私的な問題であり、国家が干渉すべきものではないと信じ始めている。我々が伝統を完全に放棄し、儒教を国家の理念として採用する場合、[Root.GetAdjective]の土地で暮らすあらゆる宗教の人々に平和と調和をもたらすかもしれない。"
- become_kirishitan_daimyo_title:0 "キリシタンの疑問"
- become_kirishitan_daimyo_desc:0 "ヨーロッパからの宣教師が我々の港に到着し、人々と交易を始めてからしばらく経った。我々の一族の指導者がキリシタンに対する感情を抱いていることはよく知られているが、我々が神をキリストと聖母マリアのために捨てる時が来たのだろうか？"
+ become_kirishitan_daimyo_title:0 "切支丹問題"
+ become_kirishitan_daimyo_desc:0 "ヨーロッパからの宣教師が我々の港に到着し、人々と交易を始めてからしばらく経った。我々の一族の指導者が切支丹に対する感情を抱いていることはよく知られているが、我々が神をキリストと聖母マリアのために捨てる時が来たのだろうか？"
  become_ikko_ikki_daimyo_title:0 "神風"
  become_ikko_ikki_daimyo_desc:0 "我々の支配者は、一向一揆とその仏教信仰に常に共感してきた。日本の多くの人々は仏教と神道の両方の信仰を同時に守っているが、おそらく我々が古いやり方を放棄し、真の仏教を採用する時だ。"
  become_confucian_daimyo_title:0 "儒教統治の採用"
