--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  bav_reunite_bavaria_title:0 "強大なる統一バイエルン"
- bav_reunite_bavaria_desc:0 "ルードヴィヒ4世の息子たちと、さらにステファン2世の息子たちとが相続した領土の分割を公式に決定した14世紀半ば以降、バイエルン公国は分断されてきた。しかし分断されたバイエルンは弱体で、強大な近隣諸国からの略奪行為に脆弱である。我々が時代の試練に立ち向かおうとするなら、父祖の領土を統一しなければならない！"
+ bav_reunite_bavaria_desc:0 "ルードヴィヒ4世の息子たちが、さらにステファン2世の息子たちが相続の際に領土の分割を公式に決定した14世紀半ば以降、バイエルン公国は分断され続けてきた。しかし分断されたバイエルンは弱体で、強大な近隣諸国からの略奪行為に脆弱である。我々が時代の試練に立ち向かおうとするなら、父祖の領土を統一しなければならない！"
  bav_expand_in_bavaria_title:0 "バイエルンの拡張"
  bav_expand_in_bavaria_desc:0 "バイエルンは統一されたとはいえ、オーストリアやボヘミアに単独で立ち向かうことはできない。我々は中核州となる地域を拡張し、我々よりも弱い近隣国を支配のもとに置かなくてはならない。"
  emp_bav_union_with_palatinate_title:0 "ヴィッテルスバッハ家の統一"
@@ -193,7 +193,7 @@
  emp_mlo_develop_po_valley_title:0 "ロンバルディアの発展"
  emp_mlo_develop_po_valley_desc:0 "ロンバルディアはイタリアどころか、すでにヨーロッパの中でも非常に豊かな地域の一つである。新しい製造技術の導入によって、我が国も真の経済大国になることができるだろう。"
  emp_mlo_italian_riches_title:0 "イタリアの富"
- emp_mlo_italian_riches_desc:0 "イタリアの富豪たちのお蔭で、イタリアは勢力を拡大しようとしている国々の垂涎の的となっている。我々の手に入れば、ヨーロッパの超大国の一つに昇り詰めるのは容易なことになるだろう。"
+ emp_mlo_italian_riches_desc:0 "イタリアの富豪たちのおかげで、イタリアは勢力を拡大しようとしている国々の垂涎の的となっている。我々の手に入れば、ヨーロッパの超大国の一つに昇り詰めるのは容易なことになるだろう。"
  emp_mlo_italian_riches_effect_tooltip:0 "領有する全ての§Yロンバルド§!文化の州が分離主義を持たない：\n   §Y1§!の開発度を獲得します。"
  emp_mlo_all_roads_lead_to_milan_title:0 "全ての道はミラノに通ず"
  emp_mlo_all_roads_lead_to_milan_desc:0 "ミラノはローマ市と同じくらい古くから存在し、同じくらい際立った歴史を持っている。ローマは長年にわたりイタリアにおいて卓越した地位を享受してきたが、イタリアの文化と国力が再興するであろう現在、我々はその地位を自らのものとして要求する機会を手にしているのだ。"
@@ -207,7 +207,7 @@
  emp_mlo_university_rules_monarchy_title:0 "法科大学"
  emp_mlo_university_rules_monarchy_desc:0 "各地の法科大学の発展を支援することにより、我々は素晴らしい頭脳の持ち主がこの国に絶え間なく生み出されるようにできるだろう。"
  emp_mlo_university_rules_democracy_title:0 "賢明なる者たちの支配"
- emp_mlo_university_rules_democracy_desc:0 "法科大学は我らの偉大な共和制の砦だ。我々はその発展を支援し、法科大学が現在も将来も我が国の自由を守っていくであろう指導的な市民たちを、着実に我が国に送り出し続けるようにしなければならない。"
+ emp_mlo_university_rules_democracy_desc:0 "法科大学は我らの偉大な共和制の砦だ。我々はその発展を支援し、現在も将来も我が国の自由を守っていくであろう指導的な市民たちを、法科大学が着実に我が国に送り出し続けるようにしなければならない。"
  emp_mlo_ambrosian_republic_mission_title:0 "共和制への憧憬"
  emp_mlo_ambrosian_republic_mission_desc:0 "我が国には歴代の公爵による独裁支配よりも共和政府を支持する人びとがいる。我々は我が国の階級間の意見の相違を解決しなければならない。ミラノは共和国と公国のどちらであるべきだろうか？"
  emp_mlo_ambrosian_republic_mission_trigger_tooltip:0 "国難§Y「アンブロジアーナ黄金共和国の再建」§!が解決済み。"
@@ -255,9 +255,9 @@
  emp_sav_conquer_genoa_title:0 "ジェノヴァの征服"
  emp_sav_conquer_genoa_desc:0 "我々が利用できる大洋へ抜ける海路はニース周辺に支配している狭い海峡くらいのものであり、それは容易に絶たれ得るものだ。もしジェノヴァとレグリアの残存部分を我が国の領土に組み込むことができれば、この脅威は消え去り、我が国が海軍と貿易に優れた強力な地域大国となる準備が整うだろう。"
  emp_sav_conquer_sardinia_title:0 "サルデーニャの統一"
- emp_sav_conquer_sardinia_desc:0 "サルデーニャは近隣地域のなかでも裕福なほうではないかもしれないが、サルデーニャ王国は確立された称号である。その島と王位を請求すれば、我が国はついにヨーロッパの主要国の一つとして正式に数えられるようになるだろう。"
+ emp_sav_conquer_sardinia_desc:0 "サルデーニャは近隣地域のなかでも裕福なほうではないかもしれないが、サルデーニャ王国は確立された称号である。その島と王位を請求できれば、我が国はついにヨーロッパの主要国の一つとして正式に数えられるようになるだろう。"
  emp_sav_conquer_sicily_title:0 "シチリアの奪取"
- emp_sav_conquer_sicily_desc:0 "いまや我々はサルデーニャを支配下に置いたのだから、輝かしい歴史と莫大な富を持つ島シチリアに目を向けねばならない。そこを獲得すれば、我々は西イタリアの海において優越した地位を持つことになり、また地中海交易から我が首都に富を流し込む上で有利な立場になるだろう。"
+ emp_sav_conquer_sicily_desc:0 "いまや我々はサルデーニャを支配下に置いたのだから、輝かしい歴史と莫大な富を持つ島シチリアに目を向けねばならない。そこを獲得すれば、我々は西イタリアの海において優越した地位を持つことになり、また地中海交易から我が首都に富を流し込むうえで有利な立場になるだろう。"
  emp_sav_conquer_lombardy_title:0 "ロンバルディアの奪取"
  emp_sav_conquer_lombardy_desc:0 "ミラノ人は我が国の東部国境における強大で攻撃的な勢力の代表である。その一方で、ミラノに従属する富裕な諸都市は移り気で、その支配から抜け出そうとしがちだ。ならば、おそらく我々の支配を受け容れるのも容易であろう。"
  emp_sav_conquer_UPCI_title:0 "トスカーナへの進軍"
@@ -277,7 +277,7 @@
  emp_sav_conquer_provence_title:0 "プロヴァンスの奪取"
  emp_sav_conquer_provence_desc:0 "プロヴァンス公爵は多くの請求権を持っており、広大な領域への領土請求を望んでいる。その一方で、彼が実際に支配しているのは地中海に突き出た小さな地域と、フランスの各地に散らばるわずかな飛び地だけだ。我々はアルプス周辺の地域を支配していくのだから、彼の弱さに乗じて南フランスのプロヴァンスの領邦を我が国に統合するべきだ。"
  emp_sav_conquer_occitania_title:0 "オクシタニアのサヴォイ人"
- emp_sav_conquer_occitania_desc:0 "かつて我が国は強国に囲まれたフランスのなかの小さな飛び地でしかなかった。だが我々はその状況を変えることができた。プロヴァンスを征服したことで南フランスを支配する道が開けたのだ。"
+ emp_sav_conquer_occitania_desc:0 "かつて我が国は強国に囲まれたフランスのなかの小さな飛び地でしかなかった。だが我々はその状況を変えることができた。プロヴァンスを征服したことで南フランスを支配する道が開けたのだ。我々は自分たちの運命をつかみ取らねばならない！"
  emp_sav_conquer_occitania_effect_tooltip:0 "領有する全ての§Yオクシタン§!文化の州は§Y30年間§!、§Y「オクシタニアのサヴォイ人」§!を獲得し、以下の効果を得ます：\n   州不穏度：§G-2.00§!\n   月間自治率変化：§G-0.05§!"
  emp_sav_claim_france_title:0 "フランスへの請求"
  emp_sav_claim_france_desc:0 "歴代のフランス国王は幾度となくサヴォイを虎視眈々と狙ってきた。今では彼我の立場は入れ替わり、その王位を当然持つべき我々に寄越すよう請求する時がやってきたのだ。"
@@ -1321,7 +1321,7 @@
  flavor_pap.EVTDESC14:0 "遠く海の向こうから我々の土地へと航海してきた宣教師たちが、[Root.Monarch.GetTitle]に贈り物をもたらし、ヨーロッパからのさまざまな機械的発明を示した。彼らはまた、世界の巨大な地図を作成し、暦改革のためのしっかりとしたアイデアを提案することにより、偉大な知識を示した。しかし、彼らは奇妙な宗教的および哲学的思想も持ち込んでおり、これは中国の伝統的な秩序を混乱させる可能性がある。これらの宣教師の滞在は許されるべきだろうか？"
  flavor_pap.EVTOPTA14:0 "うむ、我々はそれらの知識から恩恵を得ることができる。"
  flavor_pap.EVTOPTB14:0 "いや、その外国人の思想は我々の社会では受け入れられない。"
- flavor_pap.EVTNAME15:0 "キリシタン"
+ flavor_pap.EVTNAME15:0 "切支丹"
  flavor_pap.EVTDESC15:0 "遠い地の彼らの教皇の支持を受けたカトリックの宣教師が我々の海岸に到着し始めた。彼らはキリスト教を広め、地元住民を集団で改宗させようと試みている。彼らを止めなければ、これらのイエズス会、フランシスコ会、そしてドミニコ会は神道に重大な脅威をもたらす可能性がある。"
  flavor_pap.EVTOPTA15:0 "宣教師を止めろ！"
  flavor_pap.EVTOPTB15:0 "彼らに信仰を広めさせよう。"
