--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1585,7 +1585,7 @@
  EVTOPTA9012:0 "彼らの思想についてもっと詳しく！"
  EVTOPTB9012:0 "その人々についてもっと詳しく！"
  EVTNAME9014:0 "$PROVINCENAME$の踏絵"
- EVTDESC9014:1 "踏絵（文字通り「絵を踏むこと」）は江戸時代、隠れキリシタンを探し出すために行われた。この習慣はキリスト教徒であると疑われた者にクリスチャンの象徴を踏みにじらせることで、彼らの「無実」を証明することを強いるものだった。大名たちはこの革新的な手法を用いることで、領内のキリシタン共同体の取締りに成功を収めた。"
+ EVTDESC9014:1 "踏絵（文字通り「絵を踏むこと」）は江戸時代、隠れ切支丹を探し出すために行われた。この習慣はキリスト教徒であると疑われた者にクリスチャンの象徴を踏みにじらせることで、彼らの「無実」を証明することを強いるものだった。大名たちはこの革新的な手法を用いることで、領内の切支丹共同体の取締りに成功を収めた。"
  EVTOPTA9014:0 "興味深い開発だ。"
  EVTNAME9016:0 "天ぷらの伝来"
  EVTDESC9016:0 "新しい珍味が地元の食通たちの間に広まっている。この料理は魚や野菜に衣を付けて油で揚げたもので「天ぷら」と呼ばれている。この料理はポルトガルからの宣教師によってもたらされた。"
