--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -770,7 +770,7 @@
  muslim_piety.17.d:1 "我が国が法律主義のイスラムに対する熱意を失うにつれて、我々はズィンミー建築の公的な規制を完全に履行することを望むカーディーを見つけて任命することがより困難になった。法律は現時点では、単に執行不能になっている。"
  muslim_piety.17.a:1 "かえって好都合だ。"
  muslim_piety.20.t:1 "新しい[Root.Monarch.GetTitle]"
- muslim_piety.20.d:1 "我が国は世界の危険に直面する準備が出来ていない臆病な子供である[Root.Heir.GetName]の支配下で、しっかりとした指導者を欠いていた。幸いなことに我々のために、[Root.Heir.GetHerHis]叔父と側近が行動することを決めた。この子供は今や、[Root.Heir.GetSheHe]がもう害を及ぼすことができない場所に安全に監禁されている。顧問は新しい[Root.Monarch.GetTitle]と宣言され、必要とされる強力な指導性を我が国に必死に提供することを約束した。"
+ muslim_piety.20.d:1 "我が国は確固たる導き手がまったくいない状況にあった。君主である[Root.Heir.GetName]は臆病な子供で、世界の危険に直面する準備ができていなかった。我々皆にとって幸いなことに、[Root.Heir.GetHerHis]の叔父の一人と側近たちが行動することを決めた。幼主は今や幽閉され、もはや[Root.Heir.GetSheHe]が害を及ぼすことはない。側近の一人が新たな[Root.Monarch.GetTitle]に就き、熱望されている強力な指導力を我が国に提供することを約束した。"
  muslim_piety.20.a:0 "新しい$MONARCHTITLE$の支配が長く続き、繁栄のあらんことを！"
  muslim_dlc.22.t:0 "金曜日の祈り？"
  muslim_dlc.22.d:0 "毎週の会衆の祈りは、イスラムの支配者が何世紀にもわたって正当性を示すための手段だった。金曜日の祈りがスンナ派のカリフと世俗的なスンナ派のスルタンの名の下に行われている場所をスンナ派は長年支配してきたが、祈りの地位が不確かなものとなってきた。\nシーア派のウラマーの大半は金曜日の祈りの習慣に反対しているが、社会とウラマーと支配者を結びつけ、我々の国の忠実なシーア派に戻って来る方法としての役割と考える人もいる。"
