Save/Update files [ci skip]

--- a/source/localisation/emperor_estates_l_english.yml
+++ b/source/localisation/emperor_estates_l_english.yml
@@ -120,7 +120,7 @@
  estate_privileges_and_agendas_events.1.A:0 "選挙君主制は我が国にとって必要不可欠だ。"
  estate_privileges_and_agendas_events.1.B:0 "我々は選挙君主制を廃止するべきだ。"
  estate_nobles_nieszawa_privileges:0 "ニェシャヴァ特権"
- estate_nobles_pacta_conventa:0 "パクタ・コンウェルタ"
+ estate_nobles_pacta_conventa:0 "パクタ・コンヴェンタ"
  brahmins_hindu_loyalty_modifier:1 "[Country.GetBrahminsName]階級の忠誠度均衡値"
  brahmins_muslim_loyalty_modifier:1 "[Country.GetBrahminsName]階級の忠誠度均衡値"
  brahmins_other_loyalty_modifier:1 "[Country.GetBrahminsName]階級の忠誠度均衡値"
@@ -1101,7 +1101,7 @@
  estate_nobles_junker_primacy_desc:0 "プロイセンの田舎のユンカーは我が国の強力な圧力団体である。我々の軍隊を率いるのは彼らであり、彼らの階級が軍隊の主力を形成し、彼らの指導力が浸透させる規律によって強化されている。"
  estate_nobles_golden_liberty_desc:1 "[Root.Get貴族Name]は[Root.GetAdjective]国家を広範囲に支配し、地位や経済状態に関係なく、同等の法律上の身分が保証されている。その結果、[Root.Get貴族Name]の同意なしに統治を行うことはほとんど不可能であり、その意志に反対することは、君主の地位が不安定な場合には賢明ではないだろう。"
  estate_nobles_nieszawa_privileges_desc:0 "ニェシャヴァ特権は、新しい法律を発布するとき、軍隊を動員するとき、または新しい税を課すときに、[Root.Get貴族Name]たちの承認を求めることを[Root.Monarch.GetTitle]に要求する。"
- estate_nobles_pacta_conventa_desc:0 "パクタ・コンウェルタは、選出された君主とセイムの間の正式な契約であり、国の支配を後者に渡し、君主が新しい政策や法律の承認をセイムに依頼するよう強制する。"
+ estate_nobles_pacta_conventa_desc:0 "パクタ・コンヴェンタは、選出された君主とセイムの間の正式な契約であり、国の支配を後者に渡し、君主が新しい政策や法律の承認をセイムに依頼するよう強制する。"
  estate_nobles_veto_heir_apparent_desc:0 "我々の選挙君主制の仕組みにおいては、明白な後継者が外国人となったり、あるいは君主の地位に適さない人物が選ばれるといったことが発生する可能性がある。しかしながら、[Root.Get貴族Name]たちとの新たな取り決めは、このような結果を王室の拒否権によって防ぐことを可能にするよう交渉できるが、それでもこうした拒否権の行使はひんしゅくを買うことになるだろう"
  estate_burghers_the_great_privilege_desc:0 "そこでの我々の支配の継続に関し、皇帝と低地地方の彼の支持者の黙認を確保するため、かなりの譲歩が必要であった。"
  estate_burghers_exclusive_trade_rights_desc:0 "[Root.Get市民Name]の生計は交易に依存している。そこから得られる収益の管理においてある程度の独占権を彼らに与えれば、彼らの立場はかなり強化されるだろうし、これは確実に、[Root.Monarch.GetTitle]に対するより大きな支持という形で報いられるであろう。"
