--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -1482,7 +1482,7 @@
  desc_fra_master_of_india_2:0 "フランスは、ライバルのヨーロッパ勢力の干渉なしに、インドで自由に拡大できる。"
  les_invalides:0 "アンヴァリッド"
  desc_les_invalides:0 "我々の軍病院は負傷者を治療し、彼らができるだけ早く戦いに戻ることを可能にしている。"
- dragonnades:0 "ドラゴネード"
+ dragonnades:0 "ドラゴナード"
  desc_dragonnades:0 "我々は、脅しによって、異端者を我が国から離れさせることを目的とした政策を制定した。"
  france_rules_the_waves:0 "フランスよ大海原を支配せよ"
  desc_france_rules_the_waves:0 "ロイヤル・ネイビーを海の藻屑にしてやった、フランスよ大海原を支配せよ。"
