--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -3194,7 +3194,7 @@
  PROV_ADJ4260:0 "ヴイシニー・ヴォロチョーク"
  PROV_ADJ4261:0 "ウスチュジナ"
  PROV_ADJ4262:0 "トチマ"
- PROV_ADJ4263:0 "ソーリ・ガーリチスカヤ"
+ PROV_ADJ4263:0 "ソリ・ガーリツカヤ"
  PROV_ADJ4264:0 "テチューシ"
  PROV_ADJ4265:0 "ヤール・チャル"
  PROV_ADJ4266:0 "イジカル"
