Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -1021,7 +1021,7 @@
  hannoverian_nation_title:0 "ハノーファーを形成"
  hannoverian_nation_desc:0 "この地方の主要な州を支配するようになったため、地元の貴族たちには我々の統治を受け入れる以外の選択肢はない。彼らが同意すれば、ハノーファーの統一された公国は地方の主要な力となるだろう。"
  westfalian_nation_title:0 "ヴェストファーレンを形成"
- westfalian_nation_desc:0 "啓蒙思想がヨーロッパを席巻する中、我々はヴェストファーレンで我々自身がそれらを受け入れることを選択するかもしれない。我々の将来のモデル国家は、すべての人々の平等な権利としての革命的な思想、農奴のための自由と、ユダヤ人のための解放の思想、そして土地所有権とギルドの廃止を通じて自由な事業を可能にすることである。"
+ westfalian_nation_desc:0 "啓蒙思想がヨーロッパを席巻する中、我々はヴェストファーレンで我々自身がそれらを受け入れることを選択するかもしれない。我々の将来のモデル国家は、全ての男性が平等であること、農奴の解放と、ユダヤ人の解放、そして土地所有権とギルドの廃止を通じて自由な事業を可能とする革命的な思想を特徴としている。"
  greek_nation_title:0 "ギリシャを形成"
  greek_nation_desc:0 "何年もの間、ヘラスはいくつかの王国に分かれているか、我々の一般的な敵を喜ばす外国人が占領していた。ギリシャの土地を唯一の旗と統治者のもとに統合することは、偉大さをもたらす唯一の方法である。"
  maintheme:0 "メインテーマ"
