--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -194,7 +194,7 @@
  devotion_events.5.a:0 "虚栄心は、それが要塞のためになろうと罪である。"
  devotion_events.5.b:0 "それに支払うために税金を増やすだけだ。"
  devotion_events.6.t:0 "宗教のためのクエスト"
- devotion_events.6.d:0 "宗教改革についての急進的な思想で知られている人物が、彼の説教の中で司祭や[Root.Religion.GetName]の教義を非難している。これは、広範な苦情と、我々のそれほど忠実でない市民たちからのからの宗教的自由に対する要求をもたらした。"
+ devotion_events.6.d:0 "宗教改革についての急進的な思想で知られている人物が、彼の説教の中で司祭や[Root.Religion.GetName]の教義を非難している。これは、広範な苦情と、我々のそれほど忠実でない市民たちからの宗教的自由を求める要求をもたらした。"
  devotion_events.6.a:0 "我が国は[Root.Religion.GetName]であり、常に[Root.Religion.GetName]であり続けるだろう！"
  devotion_events.6.b:0 "都市に完全な宗教の自由を認めよう。"
  devotion_events.7.t:0 "偽りの信仰"
@@ -516,7 +516,7 @@
  protestantism_events.10.a:0 "力強い説得のための時間だ。"
  protestantism_events.10.b:0 "今のところ、この地域を免除する。"
  protestantism_events.11.t:0 "$THEOLOGIAN$が[Root.GetName]の教会を非難"
- protestantism_events.11.d:0 "$THEOLOGIAN$は、改革が私たちの国に届き、[Root.GetName]の国教会が創設されるずっと前から有望な経歴を持っていた。教会の新しい性質を受け入れることを納得することは、確固たる根拠のある思想を持つ有力な人物として、$THEOLOGIAN$にとっては難しいことであった。この変化への抵抗は、何年にもわたって大きくなったに過ぎず、今や$THEOLOGIAN$は公然と教会に反対しているようだ。宮廷の一員が、このように[Root.Monarch.GetName]に公然と反対するのを見過ごすことはできない。何かをする必要がある！"
+ protestantism_events.11.d:0 "$THEOLOGIAN$は、改革が私たちの国に届き、[Root.GetName]の国教会が創設されるずっと前から有望な経歴を持っていた。教会の新しい性質を受け入れることを納得することは、確固たる根拠のある思想を持つ有力な人物として、$THEOLOGIAN$にとっては難しいことであった。この変化への抵抗は、残念ながら年々大きくなってきており、今や$THEOLOGIAN$は公然と教会に反対しているようだ。宮廷の一員が、このように[Root.Monarch.GetName]に公然と反対するのを見過ごすことはできない。何かをする必要がある！"
  catholic_stronghold:0 "カトリックの強化"
  desc_catholic_stronghold:0 "この州の人々は国教会から免除されており、今のとことは、古いカトリック信仰を実践することが許されている。"
  protestantism_events.11.a:0 "$THEOLOGIAN$を追放する。"
@@ -1279,7 +1279,7 @@
  buddhism_events.39.a:0 "これを我々の文化の一部にしなければならない！"
  buddhism_events.39.b:0 "僧院を略奪する！"
  buddhism_events.40.t:0 "宗教的な指導"
- buddhism_events.40.d:0 "スリランカの島は何世紀にもわたって強力な上座部仏教の伝統の源泉となっている。多くの意味で、上座部仏教国家のモデル社会であり、繁栄している僧院の共同体は仏教界の羨望の的である。\n我々自身の国家も上座部仏教の方法に従っているが、我々の法律や伝統は、地方の伝統や仏教の学校の思想の寄せ集めであり、我々は島の強力な僧院の基盤を欠いている。我々の閣僚は、これを解決するために、スリランカに大使を派遣し、上座部仏教の伝統を我が国にもたらすため彼らに僧侶を送ることを要請すべきだと提案している。"
+ buddhism_events.40.d:0 "スリランカの島は何世紀にもわたって強力な上座部仏教の伝統の源泉となっている。多くの意味で、上座部仏教国家のモデル社会であり、繁栄している僧院の共同体は仏教界の羨望の的である。\n我々自身の国家も上座部仏教の方法に従っているが、我々の法律や伝統は、地方の伝統や仏教の思想の寄せ集めであり、我々は島の強力な僧院の基盤を欠いている。我々の閣僚は、これを解決するために、スリランカに大使を派遣し、上座部仏教の伝統を我が国にもたらすため彼らに僧侶を送ることを要請すべきだと提案している。"
  buddhism_events.40.a:0 "大使を派遣しよう。"
  buddhism_events.40.b:0 "いや、我々は地元の宗派を支援する必要がある！"
  buddhism_events.41.t:0 "[From.GetName]からの大使"
