--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -201,7 +201,7 @@
  vaisyas_estate_events.8.c:0 "絹はいつでも有益だ。"
  VAISYA_GUILDS_PROMOTED:0 "ギルドの促進: §Y$VAL$%§!"
  vaisyas_estate_events.9.t:0 "ギルドの政策要求の作成"
- vaisyas_estate_events.9.d:0 "[Root.Monarch.GetName]は、ヴァイシャの商人組合に多くの特権と譲歩を与えました。国家経済に対してほぼ歯止めの効かない権力を振るうことで、彼らは[Root.GetAdjective]の政治において無視できない勢力となりました。\n\nさらに権力を集める機会に気付いた、最も影響力のある組合は、丁寧だが力強い一連の政策提言をするため、[Root.Capital.GetName]に使節を送りました。財務顧問はこれらの方針にいくつかの商業上の利点を見出していますが、組合が最も影響力を持ち、彼らを基本的に豪商にしている州への法外な自治権の付与を伴うことに注意して下さい。要求を拒否することは、彼らの権力を減少させる事に大きな効果があるでしょうが、組合を激怒させるでしょう。"
+ vaisyas_estate_events.9.d:0 "[Root.Monarch.GetName]は、ヴァイシャの商人組合に多くの特権と譲歩を与えました。国家経済に対してほぼ歯止めの効かない権力を振るうことで、彼らは[Root.GetAdjective]の政治において無視できない勢力となりました。\n\nさらに権力を集める機会に気付いた、最も影響力のある組合は、丁寧だが力強い一連の政策提言をするため、[Root.Capital.GetName]に使節を送りました。財務顧問はこれらの方針にいくつかの商業上の利点を見出していますが、組合が最も影響力を持ち、彼らを基本的に豪商にしている州への法外な自治権の付与を伴うことに注意してください。要求を拒否することは、彼らの権力を減少させる事に大きな効果があるでしょうが、組合を激怒させるでしょう。"
  vaisyas_estate_events.9.a:0 "特権を付与する。"
  vaisyas_estate_events.9.b:0 "特権を拒否しよう。"
  EST_VAL_VAISYA_GUILD_PRIVILEGES:0 "ギルド特権: §Y$VAL$%§!"
@@ -404,7 +404,7 @@
  ENACT_PREVIOUS_LEVEL_BEFORE:0 "§Rこの改革を制定する前に、前列を制定する必要があります。§!"
  VACANT_REFORM_DESC:0 "この政府改革はコストなしで選択でき、以下のボーナスが得られます：\n$BENEFITS$"
  CHANGE_REFORM_DESC:3 "政府改革$REFORM|Y$に変更すると、政府改革進捗度が$COST|R$減少し、以下のボーナスが得られます：\n$BENEFITS$"
- CHANGE_REFORM_POTENTIAL:1 "\nこの改革は、あなたが以下の条件を満たしているだけに限って、利用可能なことに注意して下さい：\n$CONDITIONS$"
+ CHANGE_REFORM_POTENTIAL:1 "\nこの改革は、あなたが以下の条件を満たしているだけに限って、利用可能なことに注意してください：\n$CONDITIONS$"
  NO_MANUAL_CHANGE:0 "この改革を手動で選択することはできません。"
  CHANGE_REFORM_CONFIRM_DESC:2 "政府改革$REFORM|Y$に変更してもよろしいですか？ 変更には$COST|R$の政府改革進捗度が必要で、これにより以下のボーナスが得られます：\n$BENEFITS$$POTENTIAL$"
  VACANT_REFORM_CONFIRM_DESC:0 "政府改革$REFORM|Y$を選択してもよろしいですか？ この選択はコスト不要で、以下のボーナスが得られます：\n$BENEFITS$"
@@ -632,7 +632,7 @@
  BREAK_ALLIANCE_SAME_TEAM:0 "チームメイト$MEMBER$との同盟は破棄できません！"
  ADD_TO_TRADE_COMPANY:0 "$REGION|Y$での交易会社に$PROV|Y$を追加します。"
  ADD_TRADE_COMPANY_INVESTMENT:0 "$AREA|Y$での交易会社投資$NAME|Y$を作ります。"
- PICK_COUNTRY_FIRST_JOIN_TEAM:0 "§Rチーム参加前に国家を選択して下さい！§!"
+ PICK_COUNTRY_FIRST_JOIN_TEAM:0 "§Rチーム参加前に国家を選択してください！§!"
  REMOVE_TEAM:0 "チームを削除"
  EDIT_TEAM:0 "チームを作成"
  JOIN_TEAM:0 "チームへ加入"
@@ -953,7 +953,7 @@
  EST_VAL_MARATHA_DOMINANCE:1 "マラーターの優位: §Y$VAL$§!"
  NO_POLICY_AVAILABLE:0 "選択できる政策はありません。アイデアグループを完了することで、さらなる政策を解除できます。"
  MACRO_NOT_CONTROLLED:0 "§R$PROV$が支配下にありません。§!"
- CANNOT_FETCH_LEGAL_DOCUMENTS:0 "§RURLが取得できませんでした。インターネットに接続できるか確認して下さい。§!"
+ CANNOT_FETCH_LEGAL_DOCUMENTS:0 "§RURLが取得できませんでした。インターネットに接続できるか確認してください。§!"
  DOESNT_HAVE_ANY_TRADE_COMPANY_INVESTMENT:0 "$INVESTOR|Y$は、$AREA|Y$におけるいずれの交易会社も保有していない\n"
  HAS_ANY_TRADE_COMPANY_INVESTMENT:0 "$INVESTOR|Y$は、$AREA|Y$における交易会社を保有している\n"
  dutch_republic.33.d2:1 "[Root.GetAdjectiveCap]州議会内での数年間の内ゲバは、[Root.GetName]の国民精神に否定的影響を与え始めました。州議会に反対する世論の高まりから、市民の間で多くの声援を呼び出しました。\n\nまもなく、一人の候補者が彼の敵対者の中心にそびえ立ち、州議会にまだ残るわずかな敵を打倒し、[Root.GetName]の輝かしい伝統を復活させます。"
