--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -1878,7 +1878,7 @@
  desc_roman_hre:0 "教皇と皇帝の間の問題は終わりを告げ、数世紀にわたった長い闘争が解決された。"
  hre_autonomy:0 "集権化された帝国"
  desc_hre_autonomy:0 "我々が神聖でなく、ローマ的でなく、ましてや帝国ですらないなどと、誰にも言わせはしない！"
- ger_crushed_dutch_independence:0 "オランダの独立を粉砕"
+ ger_crushed_dutch_independence:0 "オランダの独立を粉砕した"
  desc_ger_crushed_dutch_independence:0 "オランダの独立への希望は打ち砕かれた。低地諸国は正当なドイツの統治下へと戻されている。"
  alb_skanderbeg_rebellion_title:0 "スカンデルベクの反乱"
  alb_skanderbeg_rebellion_desc:0 "スカンデルベクはオスマン帝国のアルバニア侵攻に抵抗するという大義を掲げた。彼の英雄的な努力はこれまで我々をトルコの侵略から安全に守ってきたが、彼が反乱を続けるためにはより多くの兵士たちが必要になるだろう。"
