--- a/source/localisation/loadingtips_l_english.yml
+++ b/source/localisation/loadingtips_l_english.yml
@@ -81,7 +81,7 @@
  LOADING_TIP_79:1 "人的資源の回復はゆっくりです。人的資源を節約するために傭兵団を雇うことを考えてみましょう。"
  LOADING_TIP_80:0 "Homeキーを押すとあなたの国の首都の州に移動します。"
  LOADING_TIP_81:0 "熟練した顧問はそうでない顧問より多くの費用がかかります。能力の高い顧問を雇う前に、余裕があるか確認しましょう。"
- LOADING_TIP_82:0 "軍事ユニットを比較する時、射撃や白兵の点数だけを見てはいけません。射撃や白兵への補正も心の中に止めておいて下さい。"
+ LOADING_TIP_82:0 "軍事ユニットを比較する時、射撃や白兵の点数だけを見てはいけません。射撃や白兵への補正も心の中に止めておいてください。"
  LOADING_TIP_83:0 "高レベルな要塞は大砲なしで攻囲することはできません。十分な砲火力があることを確認してください。"
  LOADING_TIP_84:0 "反乱の気運がある州に軍を動かせば、不穏度を減らすことができます。"
  LOADING_TIP_85:0 "敵が海峡を横断するのを妨害するために艦隊を動員できます。"
