--- a/source/localisation/tutorial_l_english.yml
+++ b/source/localisation/tutorial_l_english.yml
@@ -247,7 +247,7 @@
  TUT_ADV_CHAPTER03_PAGE09_TEXT:0 "交易力を増やす最も簡単な方法は、より多くの§M小型船§!を建造し、§M交易の保護§!を行わせることです。交易を保護しているバークは交易ノード内の交易力を3増加させます。"
  TUT_ADV_CHAPTER03_PAGE09_OBJECTIVES:0 "§Y左上の§M生産インターフェース§Yをクリックしてください。"
  TUT_ADV_CHAPTER03_PAGE10_TITLE:0 "§Y船の建造（10/11）§!"
- TUT_ADV_CHAPTER03_PAGE10_TEXT:0 "交易ノードで交易の保護をおこなう各バークは§M交易力を3§!増加させます。より高いレベルの小型船は、より大きな交易力を有します。\n\n§Y左のリストから§Mバーク§Yを選択し、マップ上の緑の州をクリックして建造を開始します。ゲームの一時停止を解除するのを忘れないで下さいね。§W"
+ TUT_ADV_CHAPTER03_PAGE10_TEXT:0 "交易ノードで交易の保護をおこなうバーク毎に§M交易力を3§!増加させます。より高レベルの小型船は、より大きな交易力を有します。\n\n§Y左のリストから§Mバーク§Yを選択し、マップ上の緑の州をクリックして建造を開始してください。ゲームの一時停止を解除するのを忘れないでくださいね。§W"
  TUT_ADV_CHAPTER03_PAGE10_OBJECTIVES:0 "§M5隻の小型船（バーク）§!を建造してください。"
  TUT_ADV_CHAPTER03_PAGE11_TITLE:0 "§Y章のおわりに（11/11）§!"
  TUT_ADV_CHAPTER03_PAGE11_TEXT:0 "これでチュートリアルの交易の章を終了します。Europa Universalis IV の交易がどのように機能しているのかをよく理解していただけたなら幸いです。"
