--- a/source/localisation/subscription_l_english.yml
+++ b/source/localisation/subscription_l_english.yml
@@ -7,7 +7,7 @@
  SUB_ACTIVE_VERIFYING_DOWNLOAD:0 "確認中"
  SUB_VIEW_BONUS_DLC:0 "サブスクリプションボーナス"
  SUB_VIEW_BONUS_DLC_DESC:0 "サブスクリプションを開始すれば、\n拳銃装備のヨーロッパ\n胸甲騎兵ユニットが\nプレゼントされます。"
- SUPPORT_TEXT:0 "下のボタンを押してサポートに連絡して下さい。"
+ SUPPORT_TEXT:0 "下のボタンを押してサポートに連絡してください。"
  SUB_BANNER_PITCH_NOPRICE:0 "月額サービスを利用することで、利用可能なDLC全てにアクセスいただけます。"
  SUB_BANNER_PITCH_PRICE:0 "月額$PRICE$で、利用可能なDLC全てにアクセスいただけます。"
  SUB_BANNER_LICENSE_EXPIRED:0 "サブスクリプションの有効期限が切れています。ゲームをそのまま再起動するか、サブスクリプションを更新してください。"
@@ -22,7 +22,7 @@
  SUB_VIEW_SURVEY_CLOSE:0 "中止"
  SUB_VIEW_SURVEY_CONFIRM:0 "サブスクリプションの解除"
  SUB_VIEW_SURVEY_TITLE:0 "EU4DLC利用のサブスクリプション解除"
- SUB_VIEW_SURVEY_TEXT:0 "これによってサブスクリプションはキャンセルされますが、更新日まではDLC全てを利用できます。その後、保存したゲームにはDLCコンテンツがない状態となります。\n\n今後も継続的にサービスを向上させていくために、サブスクリプション解除の理由をお聞かせください。\n\n該当するボタンをご選択下さい："
+ SUB_VIEW_SURVEY_TEXT:0 "これによってサブスクリプションはキャンセルされますが、更新日まではDLC全てを利用できます。その後、保存したゲームにはDLCコンテンツがない状態となります。\n\n今後も継続的にサービスを向上させていくために、サブスクリプション解除の理由をお聞かせください。\n\n該当するボタンを選択してください："
  SUB_VIEW_SURVEY_NOTUSE_TEXT:0 "このサービスが利用できなかったから"
  SUB_VIEW_SURVEY_NOTWANT_TEXT:0 "このサービスをもう利用したいと思わなくなったから"
  SUB_VIEW_SURVEY_EXPENSIVE_TEXT:0 "高すぎる"
@@ -40,8 +40,8 @@
  UNSUBSCRIBE:0 "サブスクリプションの解除"
  SUBSCRIPTION_ERROR_MSG_TITLE:0 "サブスクリプションエラー"
  SUBSCRIPTION_ERROR_UNABLE_TO_SEND:0 "リクエストを送信できません。"
- SUBSCRIPTION_ERROR_OFFLINE:0 "サーバーへの接続が確立されていません。インターネット接続を確認して、再度やり直してみて下さい。"
- SUBSCRIPTION_ERROR_BUSY:0 "リクエストの終了を待っています。時間をおいて、後で再度やり直してみて下さい。"
+ SUBSCRIPTION_ERROR_OFFLINE:0 "サーバーへの接続が確立されていません。インターネット接続を確認して、再度やり直してみてください。"
+ SUBSCRIPTION_ERROR_BUSY:0 "リクエストの終了を待っています。時間をおいて、後で再度やり直してみてください。"
  SUBSCRIPTION_ERROR_LOGIN_STEAM:0 "Steamアカウントにログインする必要があります。"
  SUBSCRIPTION_ERROR_ACCOUNT_VALIDATION:0 "Steamログインの認証に失敗しました。"
  SUB_BANNER_ACTIVE:0 "サブスクリプションはアクティブです。全てのDLCがインストールされ、すぐに利用できます。"
@@ -52,7 +52,7 @@
  SUB_BANNER_RESTART_NEEDED:0 "サブスクリプションはアクティブです。全てのDLCをアクティブにするにはゲームを再起動する必要があります。"
  SUB_VIEW_CONNECTION_REQUIRED:0 "サブスクリプションサーバに接続できませんでした"
  CONFIRM_START_WITHOUT_SUB_TITLE:0 "DLCがインストールされていません"
- CONFIRM_START_WITHOUT_SUB_DESC:0 "サブスクリプションDLCなしでゲームをプレイしますか？\nサブスクリプションをしたDLCを使用する場合は、サブスクリプションウィンドウを開いてダウンロードを行い、ゲームの再起動をして下さい。"
+ CONFIRM_START_WITHOUT_SUB_DESC:0 "サブスクリプションDLCなしでゲームをプレイしますか？\nサブスクリプションをしたDLCを使用する場合は、サブスクリプションウィンドウを開いてダウンロードを行い、ゲームの再起動をしてください。"
  CONFIRM_QUIT_WHILE_SUB_DOWNLOAD_TITLE:0 "ダウンロード中に終了を確認しました"
  CONFIRM_QUIT_WHILE_SUB_DOWNLOAD_DESC:0 "サブスクリプションDLCのダウンロードが完了する前に終了してもよろしいですか？"
  SUB_VIEW_RECONNECT_BUTTON:0 "リトライ"
