Save/Update files [ci skip]

--- a/source/localisation/diplo_reasons_l_english.yml
+++ b/source/localisation/diplo_reasons_l_english.yml
@@ -35,7 +35,7 @@
  DIPLO_TOO_LARGE_MARCH:0 "$OVERLORD$に比べ国力が高すぎる："
  DIPLO_TOO_SMALL_MARCH:0 "$OVERLORD$に比べ国力が低すぎる："
  DIPLO_NOT_SMALL_NATION:0 "$WHO$は属国化するには大きすぎる："
- DIPLO_EMBARGO_AGAINST:0 "$WHO$は$AGAINST$に対し禁輸措置を実行している："
+ DIPLO_EMBARGO_AGAINST:0 "$WHO$は$AGAINST$に対し禁輸を行っている："
  DIPLO_POPE:0 "$WHO$は教皇である："
  DIPLO_DISHONORED_ALLIANCE_RECENTLY:0 "$WHO$は最近$US$との同盟を履行しなかった："
  DIPLO_ELECTOR:0 "$WHO$は選帝侯である："
