--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -3294,7 +3294,7 @@
  EVTOPTA9453:0 "あの人たちはみんな男の人のために泣いているんだよ…"
  EVTOPTB9453:0 "あの人たちは単に泣いているだけだよ。"
  EVTNAME9454:0 "沈黙の春"
- EVTDESC9454:0 "彼女は笑い、「陛下…」と言う。彼女を見る。彼女の美しさはあなたの領土では比類のないものであるどころか、あなたの領土を超えてさえも。何も言わない。春が空気の中にあり、彼女に寄りかかると、彼女の香水の酔うような香りが痛みを伴って、思考が心を横切る…"
+ EVTDESC9454:0 "彼女は笑い、「陛下…」と言う。彼女を見る。彼女の美しさはあなたの領土どころか、領土外ですら比類のないものである。場が静寂に包まれる。春の息吹に包まれる中で、彼女に寄りかかると、彼女の香水の魅惑的な香りが猛烈に漂い、ある思考が心を横切る…"
  EVTOPTA9454:0 "可愛いらしい娘だ…"
  EVTOPTB9454:0 "奥の手を…"
  EVTNAME9455:0 "夜会"
