--- a/source/localisation/third_rome_l_english.yml
+++ b/source/localisation/third_rome_l_english.yml
@@ -183,7 +183,7 @@
  custom_administrative_efficiency:1 "冷酷な行政"
  custom_administrative_efficiency_desc:1 "我が国の行政が一様に流れを確実にするために多くの領収書と残高がある。それらの大半を無視して、我が国の主要政策に拡大することを定めれば、我等は早くもっと領土を要求できるだろう。"
  custom_institution_spread_from_true_faith:1 "宗教の同胞達"
- custom_institution_spread_from_true_faith_desc:1 "信仰の同胞達と共に、彼らの言葉は最高の言葉ではないが核となる部分は真実であるという信頼感を心にとめ、我らは新しく役に立つ考えを広げる手助けをしよう。"
+ custom_institution_spread_from_true_faith_desc:1 "信仰の同胞達と共に、彼らの言葉は最高の言葉ではないが少なくとも核となる部分は真実であるという信頼感を心にとめ、我らは新しく役に立つ考えを広げる手助けをしよう。"
  custom_global_institution_spread:1 "新思想の最前線"
  custom_global_institution_spread_desc:1 "新しいものが古いものに会ったとき、古いものが道を譲らなくてはならないということはよくあることだ。我が国は可能な限り小さな混乱で急進的な新規の考えを受け入れることによく慣れている。"
  custom_embracement_cost:1 "倹約的な説得"
