--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -16,7 +16,7 @@
  guaranteed:0 "独立保障"
  alliance:0 "同盟"
  SPYNETWORKTOOSMALL:0 "これを実行するには$ADJ|Y$における諜報網規模が$AMOUNT|Y$以上である必要があります。"
- federation:0 "連邦の指導者"
+ federation:0 "連邦指導国"
  in_war_togeather:0 "同じ戦争"
  converted_our_culture:0 "我々の文化を変換"
  same_dynasty:0 "同じ王朝"
@@ -81,9 +81,9 @@
  NO_ANNEX_PROGRESS_LIBERTY:0 "彼らの独立欲求が高すぎるため、併合が進みません。併合のためには独立欲求が§Y$LIMIT$§!未満である必要がありますが、現在の独立欲求の値は§R$AMOUNT$§!です。\n"
  ALL_CORES_AND_CLAIMS:0 "全ての中核州と請求権を持つ州"
  RIVAL_BENEFITS:1 "§Y$WHO$§!は我々のライバルであり、彼らに対し我が国は以下のボーナスを得る：\n"
- RIVAL_DIPLO_ALLY:0 "彼らの敵と同盟を結べる可能性が高い。\n"
+ RIVAL_DIPLO_ALLY:0 "- 彼らの敵と同盟を結べる可能性が高い。\n"
  RIVAL_BENEFITS_NONE:1 "ライバルに対して、我が国は以下のボーナスを得る：\n"
- RIVAL_BENEFITS_TRADE:0 "禁輸中の交易効率ペナルティがない。\n"
+ RIVAL_BENEFITS_TRADE:0 "- 禁輸中の交易効率ペナルティがない。\n"
  RIVAL_PRESTIGE:0 "戦闘に勝利した時の威信の上昇$VAL$。\n"
  RIVAL_DIP_POWER:0 "和平交渉で州を要求するための£dip£外交君主点が$VAL$になる。\n"
  RIVAL_SPY:0 "諜報網の構築の速度が$VAL$増加する。\n"
