--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -79,11 +79,11 @@
  alert_native_advancement_instant:0 "§Yネイティブ・アメリカンの進歩に投資可能§!"
  alert_native_advancement_delayed:0 "$LIST$"
  alert_federation_drop_instant:0 "§Yあなたはすぐに連邦から除かれるでしょう。§!"
- alert_federation_drop_delayed:0 "$LIST$\n連邦のリーダーがあなたに関する否定的な評価を得た場合、あなたは連邦から追放されるでしょう。"
+ alert_federation_drop_delayed:0 "$LIST$\n連邦指導国があなたに対し否定的な評価を得た場合、連邦から追放されるでしょう。"
  alert_high_liberty_desire_instant:0 "§Y従属国の独立欲求が高い§!"
  alert_high_liberty_desire_delayed:0 "$LIST$\n従属国の一つで独立欲求が$LIMIT|Y0$以上になると、彼らは不忠になり、独立戦争を宣言する可能性があります。"
  WHO_LIBERTY_DESIRE:0 "$WHO|Y$の独立欲求：§Y$VAL$%§!"
- FEDERATION_NEEDS_GOOD_OPINION:0 "連邦の盟主国は新たな参加希望国に対する肯定的な評価を持っている必要がある。"
+ FEDERATION_NEEDS_GOOD_OPINION:0 "連邦指導国は新たな参加希望国に対する肯定的な評価を持っている必要がある。"
  MIGRATE_REASON_NOT_NEIGHBOR:0 "隣接する州が存在しない。"
  MIGRATE_REASON_NOT_DISCOVERED:0 "未発見の州に移動はできない。"
  MIGRATE_REASON_NO_PROVINCES:0 "隣接する移動可能な州がない。"
@@ -96,12 +96,12 @@
  MAPMODE_COLONIALANDTRADECOMPANYREGIONS:0 "植民地と交易地域"
  MAPMODE_COLONIALANDTRADECOMPANYREGIONS_DESC:0 "植民地国家・交易会社設立可能な地方"
  NOT_IN_FEDERATION:0 "$NAME$は連邦加盟国ではありません。"
- federation_leader:0 "連邦指導者"
- FEDERATION_LEADER:0 "連邦指導者：$LEADER|G$"
+ federation_leader:0 "連邦指導国"
+ FEDERATION_LEADER:0 "連邦指導国：$LEADER|G$"
  FEDERATION_MEMBERS:0 "連邦加盟者：$MEMBERS|Y$"
  FEDERATION_LEADER_BONUS:0 "連邦の盟主は以下のボーナスを得ます：\n$BONUS$"
  FEDERATION_OF:0 "$LEADER$連邦"
- ONLY_FEDERATION_LEADER_MAY_INVITE:0 "連邦の盟主国のみ連邦に招待可能"
+ ONLY_FEDERATION_LEADER_MAY_INVITE:0 "連邦指導国のみ連邦に招待可能"
  NEW_LEADER_ON_DEATH:0 "$LEADER|Y$の君主が死んだ時、連邦の権威が一番高い国が新しい指導者となる。現在それは連邦の権威を$VAL|Y0$持つ$NEWLEADER|Y$である。"
  FEDERAL_AUTHORITY:0 "連邦の権威：$VAL|+2$"
  REQUEST_TO_JOIN_FEDERATIONTITLE:0 "連邦への参加を要求"
