Save/Update files [ci skip]

--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -2362,13 +2362,13 @@
  desc_westphalia_religious_supermacy_mod:0 "ヴェストファーレンでは、帝国のすべての加盟国が唯一の真の信仰に従うことを確認する条約への署名が行われた。"
  westphalia_religious_peace_mod:0 "ヴェストファーレン条約"
  desc_westphalia_religious_peace_mod:0 "ヴェストファーレンでは、すべてのキリスト教徒が安全かつ迫害されることなく、帝国を通過できるようにする条約への署名が行われた。"
- westphalian_mission_events.1.t:0 "ヴェストファーレンを請求"
+ westphalian_mission_events.1.t:0 "ヴェストファーレンの請求"
  westphalian_mission_events.1.d:0 "ヴェストファーレンにおける野望が高まり続けていることで、我々は首都を[82.GetName]に移動することにより、ヴェストファーレンの領土に対する主張を強化することができるだろう。[Root.Capital.GetName]が我が国の優れた統治の中心として機能しているため、これは下手な動きだと主張する者もいる。"
  westphalian_mission_events.1.a:0 "我々はヴェストファーレンへの主張を固める必要がある。"
  westphalian_mission_events.1.b:0 "[82.GetName]は、[Root.Capital.GetName]の偉大さと比べることすらできぬ！"
- wes_enforce_sovereignty_title:0 "我々の統治権を強制"
+ wes_enforce_sovereignty_title:0 "統治権の強制"
  wes_enforce_sovereignty_desc:0 "現在のヴェストファーレンとラインラントは、取るに足らない一連の微小な国家にすぎない。我々が統治権を主張し、その主張を外国の権力に真剣に受け止めさせるには、我々は自国の中心地域への影響力を拡大しなければならない。"
- wes_conquest_of_westfalen_title:0 "ヴェストファーレンを請求"
+ wes_conquest_of_westfalen_title:0 "ヴェストファーレンの請求"
  wes_conquest_of_westfalen_desc:0 "我々の中心地域の支配を固めた今、残っているのはすべてのヴェストファーレン人を一つの国家に統一することだ！ヴェストファーレン州を請求することで、我々は[Root.GetName]がすべてのヴェストファーレンの人々の正当な故郷であることを証明するだろう。"
  wes_unite_westphalia_title:0 "ヴェストファーレンの統一"
  wes_unite_westphalia_desc:0 "ヴェストファーレンの正当な領土をすべて征服したら、次は外国の領土と文化を征服し、我々自身の帝国を作り上げる時が来るだろう！"
