--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -4240,7 +4240,7 @@
  flavor_may.5.t:0 "フランシスコ会修道士"
  flavor_may.5.d:0 "エルナン・コルテスが我々に与え偶像とした馬は、来客してきたフアン・デ・オルビタとバルトロメ・デ・フエンサリダにとって気に入らなかった。オルビタは我々の偶像を破壊したが、フエンサリダの雄弁により彼らの命は救われた。司祭たちは、偶像が破壊される前でさえ宣教師に対し敵意を持ち嫉妬しており、古代イッツァの預言によれば、まだ我らはキリスト教に改宗する時ではない、と述べていた。"
  flavor_may.5.a:0 "司祭たちは間違っている、我々はこの機会をとらえるべきだ。"
- flavor_may.5.b:0 "まだ我々は別の宗教に改宗する時ではない。"
+ flavor_may.5.b:0 "まだ我々は改宗する時ではない。"
  flavor_may.6.t:0 "マヤの神々への犠牲"
  flavor_may.6.d:0 "ディエゴ・デルガドという名前のフランシスコ会修道士と80人のキリスト教徒に改宗したマヤの人々が我々の首都に到着した。デルガドは我々を攻撃する途中だったフランシスコ・デ・ミロネス船長と行動を共にしてきたが、その修道士は船長が過度に残酷であると考え、軍を抜け出して来た。船長と彼の兵士たちは我々自身で彼らを虐殺することで既に対処されている。我々はディエゴ・デルガドと彼の信者を捕縛し、あなたの命令を待っている。彼らをマヤの神々に犠牲として捧げるべきか？それとも、解放すべきか？"
  flavor_may.6.a:0 "彼らを解放しキリスト教を受け入れよう！"
