--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -270,7 +270,7 @@
  shrewd_commerce_practise:0 "合理的商慣行"
  shrewd_commerce_practise_desc:0 "より洗練された交易慣行を利用することで、商人に競合相手に対する優位を与えることができる。"
  free_trade:0 "自由交易"
- free_trade_desc:0 "現在の商人の一族は、交易特権が彼らの排他的な保護の下で確保しようとしているが、我々は商人階級の成長を可能にするため、それを望んではいない。"
+ free_trade_desc:0 "現在の商人の一族は、交易特権によって自分たちの排他的な保護を存続させようとしているが、我々はそれを望んでおらず、商人階級を成長させるつもりだ。"
  merchant_adventures:0 "冒険的商業主義"
  merchant_adventures_desc:0 "新しい交易路を探求し探検する機会のため、彼らの奉仕を提供することに熱心であることで、我々は富と名声を求める多くの交易商を利用することができる。"
  national_trade_policy:0 "統一的交易政策"
@@ -280,11 +280,11 @@
  trade_manipulation:0 "交易操作"
  trade_manipulation_desc:0 "交易が何らかの形で進む可能性がある重要なチョークポイントでは、我々の交易収入の増加の鍵は、そこでの強みを得る能力である。"
  fast_negotiations:0 "素早い商談"
- fast_negotiations_desc:0 "時に交易協定を締結するための鍵は最短で行うことである。我々は、商人が取引を行うことができることを確認する必要がある。"
+ fast_negotiations_desc:0 "時に交易協定を締結するための鍵は最短で行うことである。我々は、商人が確実に取引を行うことができるようにする必要がある。"
  economic_ideas:0 "経済アイデア"
  economic_ideas_bonus:0 "完成した経済アイデア"
  bureaucracy:0 "官僚機構"
- bureaucracy_desc:0 "国家の政府の役人が管轄するより官僚的な統治制度を採用することで、我々の税収を増やすことができる。"
+ bureaucracy_desc:0 "国家の政府の役人が管轄する、より官僚的な統治制度を採用することで、我々の税収を増やすことができる。"
  organised_construction:0 "組織的建築"
  organised_construction_desc:0 "政府の基盤は改良されなければならないが、それにはコストがかかる。工程を正しく構成すれば、これをより安く行うことができる。"
  smithian_economics:0 "スミス経済学"
@@ -5905,7 +5905,7 @@
  hsc_episcopalianism:0 "聖公会の教義"
  hsc_episcopalianism_desc:0 "スコットランド高地地方において教会をどのように建設すべきか、また、宗教改革の到来の後、どのような教義を採用すべきかについて多くの競合する考えがある。教会の手続きのためのはっきりとした構造と、聖職者のためのある程度教義上の独立の双方を許す、階層的な主教区のモデルを保持する事を我々は選択した。"
  hsc_highland_charge:0 "ハイランド兵の突撃"
- hsc_highland_charge_desc:0 "火器は戦場に革命をもたらしており、スコットランド高地地方の戦士はそれに適応せねばならない。攻撃的な新しい急襲戦術が我が軍の将軍によって編み出された。我々の兵士は、できれば下り坂で、最初の敵の一斉射撃のなか正面から突撃し、進むにつれて我が軍も発砲する。発砲後、彼等はより伝統的な武器を取り出し、乱戦に入る。しかしながら、この戦術に要求される速度のせいで、我々の戦士は衣類をほとんど着用しない事を余儀なくされる。"
+ hsc_highland_charge_desc:0 "火器は戦場に革命をもたらしており、スコットランド高地地方の戦士はそれに適応せねばならない。攻撃的な新しい急襲戦術が我が軍の将軍によって編み出された。我々の兵士は、できれば下り坂で、最初の敵の一斉射撃のなか正面から突撃し、進むにつれて我が軍も発砲する。発砲後、彼等はより伝統的な武器を取り出して乱戦に入る。しかしながら、この戦術に要求される速度のせいで、我々の戦士は衣類をほとんど着用しない事を余儀なくされる。"
  hsc_arming_act:0 "武装条例"
  hsc_arming_act_desc:0 "圧政者は、我々が抵抗する能力を奪うため、武器を没収する。武装条例は、全ハイランダーの者へ銃器を所有し、訓練する事を義務づける。"
  hsc_ossian:0 "オシアン"
