--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -2964,7 +2964,7 @@
  ESTATE_INFLUENCE_GREATER_THAN:0 "§Y$ESTATE$§Wの影響力が§Y$VALUE$§W以上である"
  ESTATE_INFLUENCE_NOT_GREATER_THAN:0 "§Y$ESTATE$§Wの影響力が§Y$VALUE$§W未満である"
  COUNTRY_HAS_ESTATE:0 "$COUNTRY|Y$が$ESTATE|Y$階級を持つ。"
- COUNTRY_HAS_ESTATE_NOT:0 "$COUNTRY|Y$は$ESTATE|Y$階級がありません。"
+ COUNTRY_HAS_ESTATE_NOT:0 "$COUNTRY|Y$には$ESTATE|Y$階級がいない"
  COUNTRY_HAS_ANY_ESTATE:0 "$COUNTRY|Y$が階級を持つ。"
  COUNTRY_HAS_ANY_ESTATE_NOT:0 "$COUNTRY|Y$には階級がありません。"
  ESTATE_LOYALTY_GREATER_THAN:0 "§Y$ESTATE$§Wの忠誠が§Y$VALUE$§W以上である"
@@ -3192,7 +3192,7 @@
  CONTROL_BONUS_HEAD:0 "世界供給の§Y$VAL$§W%の交易合計が得られます："
  ITEMS_TRADED_OF_WORLD:0 "これらの品はここで取引されています（世界市場の%）："
  GOODS_WE_TRADE_OF_LIMIT:0 "我々は世界の§Y$VAL$§W%にアクセスを持っており、我々は§Y$VAL2$§W%を必要としています。"
- TRADING_IN:0 "$GOOD|Y$の交易"
+ TRADING_IN:0 "$GOOD|Y$交易"
  PRODUCTION_LEADER_THEY_DESC:0 "§Y$LEADER$§Wは最大生産国です（彼ら：§Y$THEIR$§W% 我々：§Y$OUR$§W%）"
  PRODUCTION_LEADER_WE_DESC:0 "我々は生産をリードしています。（§Y$OUR$§W%）"
  de_heretico_comburendo:0 "異端火刑法"
@@ -6285,8 +6285,8 @@
  DIPLO_SKILL_IMPACT:0 "他国との外交交渉で、これもまた以下の要因により§Y$VALUE$§W補正されます："
  PREVIOUS_MISSION_WASNT:0 "最後のミッションは以下ではなかった："
  PREVIOUS_MISSION_WAS:0 "最後のミッションは以下であった："
- NATIONAL_FOCUS_IS_NOT:0 "ナショナルフォーカスは以下に設定されていない："
- NATIONAL_FOCUS_IS:0 "ナショナルフォーカスは以下に設定されている："
+ NATIONAL_FOCUS_IS_NOT:0 "ナショナルフォーカスが以下に設定されていない："
+ NATIONAL_FOCUS_IS:0 "ナショナルフォーカスが以下に設定されている："
  WARTAX_CANT_STOP_TIP:0 "我々はすでに以下まで戦争税を収集している："
  more_merchants:0 "商人の募集"
  desc_more_merchants:0 "我々の努力のすべては、現在、多くの商人を採用することに向けられている。"
@@ -8026,7 +8026,7 @@
  COLONIAL_MAINT_IRO:3 "$COLONIES_EACH$を§Y$NUM_COLONIES$§!つ持っており、$MAINTENANCE|%$の維持費で入植者の増加が毎年$GROWTH$人になります。\n"
  COLONIAL_MAINT_SETTLEMENT_GROWTH:0 "$NUM|Y$人の植民者が移民成長を促進しています。\n"
  COLONIAL_MAINT_COST:1 "これには$COST|Y$¤の費用がかかります。\n$FREE|Y$人より多くの植民地を持つと、この費用は二次関数的に増大します。"
- COLONIST_MAINT_COST:0 "これには$COST|Y$¤の費用がかかります。\n$FREE|Y$人より多くの植民者を移民成長に従事させると、この費用は二次関数的に増大します。"
+ COLONIST_MAINT_COST:0 "これには$COST|Y$¤の費用がかかります。\n$FREE|Y$箇所以上の植民地または植民者の移民成長がある場合、この費用は二次関数的に増大します。"
  NO_COLONIST_MAINT_IRO:0 "移民成長に必要な植民地も植民者もありません。"
  establish_trade_in_american_cot_title:1 "アメリカ貿易"
  CHURCH_POWER:1 "教会権力：$POWER|Y$"
