--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -78,9 +78,9 @@
  army_professionalism_events.5.a:0 "彼らが他の職業に手を出すのを許すべきではない。"
  army_professionalism_events.5.b:0 "今のところ、我々はそれを許可する。"
  army_professionalism_events.6.t:0 "外国人の能力"
- army_professionalism_events.6.d:0 "我々の訓練教官は、[professional_country.GetAdjective]軍と、軍の日常業務と慣行を整理するため、採用に成功した方法に畏敬の念を抱いている。それに注目しているのは我々だけではなく、[professional_country.GetAdjective]の士官は、多くの国で需要が高まっている。当然のことながら、[professional_country.GetName]の[professional_country.GetStateForm]は海外で就職しようとする士官をすんなりと認めることはなく、我々が彼らの国民を誘惑しようとすれば、不満を示す可能性があるだろう。\nしかしながら、もし我々にそれだけの価値があるのであれば、そのような経歴への機会に興味のある個人がいないというわけではない。"
- army_professionalism_events.6.a:0 "[professional_country.GetAdjective]の士官を採用する。"
- army_professionalism_events.6.b:0 "我々の人々に引き続き頼っていこう。"
+ army_professionalism_events.6.d:0 "我々の訓練教官は、[professional_country.GetAdjective]軍と、軍の日常業務および慣行の整理に成功した方法に畏敬の念を抱いている。それに注目しているのは我々だけではなく、[professional_country.GetAdjective]士官は、多くの国で需要が高まっている。当然のことながら、[professional_country.GetName]の[professional_country.GetStateForm]は海外で就職しようとする士官をすんなりと認めることはなく、我々が彼らの国民を誘惑しようとすれば、不満を示す可能性があるだろう。\nしかしながら、それだけの価値があるのであれば、そのような経歴への機会に興味のある個人がいないというわけではない。"
+ army_professionalism_events.6.a:0 "[professional_country.GetAdjective]士官を雇う。"
+ army_professionalism_events.6.b:0 "我が国民に引き続き頼っていこう。"
  army_professionalism_events.7.t:0 "[From.GetName]への浸透"
  army_professionalism_events.7.d:1 "我が軍の専門技術により、亡命した我が軍の退役将校は、この地域の他国にとって非常に魅力的なものとなった。その結果、他国は雇う亡命者について適切に吟味していないようだ。\n我々の諜報頭は、[From.GetAdjective]の[From.GetStateForm]軍に数人の諜報員を上手く送り込めたと報告している。"
  army_professionalism_events.7.a:0 "素晴らしい…"
@@ -841,7 +841,7 @@
  STATE_JANISSARIES_GOVERNMENT_ALLOWS:0 "オスマン政府の国家のみイェニチェリを徴収できます。"
  STATE_JANISSARIES_COOLDOWN:0 "$DATE|Y$にさらにイェニチェリを募集可能です。"
  STATE_JANISSARIES_NEED_MIL_POWER:0 "イェニチェリの徴集には$AMOUNT|Y$£mil£が必要です。"
- STATE_JANISSARIES_DESC:2 "§Yオスマン政府§!であることにより、我々は異教徒の州でイェニチェリを募集することができます。より多くの異教徒の開発度により、我々はより多くのイェニチェリを彼らから集めることができます。"
+ STATE_JANISSARIES_DESC:2 "§Yオスマン政府§!であることにより、異教徒の州でイェニチェリを徴兵可能。異教徒の開発度が大きいほど、より多くのイェニチェリを引き出すことができる。"
  RELIGIOUS_SCHOOL_MAP_ICON_TOOLTIP:0 "$COUNTRY$$FLAG$は$SCHOOL|Y$に従っています。"
  DISBAND_UNIT_RETURN_MANPOWER_CAPPED:0 "最大人的資源$MAX|Y$を超えることはできないため、兵士の内$NUMBER|Y$人だけ、人的資源に戻ります。傭兵は戻りません。"
  CENTER_HAS_NO_PROVINCES_TO_CONVERT:0 "§R改宗完了！すべての適格な州ですでに改宗が完了しています。§!\n"
