--- a/source/localisation/loadingtips_l_english.yml
+++ b/source/localisation/loadingtips_l_english.yml
@@ -43,7 +43,7 @@
  LOADING_TIP_41:0 "ユニットの募集コストを削減すると、ユニットの維持コストも削減されます。"
  LOADING_TIP_42:0 "顧問にかかるコストは時間が経つにつれて増加します。"
  LOADING_TIP_43:0 "植民地を設立した後、入植者を呼び戻してもかまいません。その植民地の成長は遅くなりますが、別の州を植民地化できます。"
- LOADING_TIP_44:0 "植民地維持限界を超えると、大幅に植民地維持費が増加します。"
+ LOADING_TIP_44:0 "植民地維持限界を超えると、植民地維持費が大幅に増加します。"
  LOADING_TIP_45:0 "一度にあまりに多くの土地を獲得しないようにしましょう。\n過剰拡大は困難の兆候です。"
  LOADING_TIP_46:0 "過剰拡大は安定度上昇コストを増加させます。"
  LOADING_TIP_47:0 "宗教統一度が低いと、州の不穏度が増加します。"
@@ -85,7 +85,7 @@
  LOADING_TIP_83:0 "高レベルな要塞は大砲なしで攻囲することはできません。十分な砲火力があることを確認してください。"
  LOADING_TIP_84:0 "反乱の気運がある州に軍を動かせば、不穏度を減らすことができます。"
  LOADING_TIP_85:0 "敵が海峡を横断するのを妨害するために艦隊を動員できます。"
- LOADING_TIP_86:0 "ゲームのスクリーンショットはここに保存されています： ../Documents/Paradox Interactive/Europa Universalis IV/Screenshots"
+ LOADING_TIP_86:0 "ゲームのスクリーンショット保存場所：../Documents/Paradox Interactive/Europa Universalis IV/Screenshots"
  LOADING_TIP_87:0 "F11キーを押すと、ゲームのスクリーンショットを保存します。"
  LOADING_TIP_88:0 "Shiftキーを押しながらユニットに命令を与えるとカスタムパスを作成できます。"
  LOADING_TIP_89:0 "セーブゲームの削除ボタンをクリックすることで、ゲーム中にセーブデータを削除できます。"
