Save/Update files [ci skip]

--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -981,7 +981,7 @@
  NOT_IN_PORT:0 "$BUILDING$は、港にのみ建設できます。"
  COST:0 "コスト：§Y$AMOUNT$§Wダカット \n建設時間：§Y$TIME$§W日"
  PROVINCE_OCCUPIED:0 "この州は占領されています。"
- RECRUIT_REGIMENT:0 "クリックして連隊を募集します。"
+ RECRUIT_REGIMENT:0 "連隊を募集するにはここをクリックしてください。"
  OFFENSEMORALE:0 "攻撃側士気：$VALUE$"
  DEFENSEMORALE:0 "守備側士気：$VALUE$"
  OFFENSEFIRE:0 "攻撃側射撃：$VALUE$"
@@ -993,7 +993,7 @@
  MORALEDESCR:0 "ユニットの士気値は、敵のユニットにどれだけの士気ダメージを与えるかを示す尺度です。戦闘員の士気が0になると、たとえ数的に勝っていても軍は退却します。ダメージの量は、攻撃側の攻撃的な士気値と、防御側の防御的な士気値に部分的に依存します。"
  AFFORD_REGIMENT:0 "この連隊を買う余裕がありません。少なくとも$COST$¤が必要です。"
  INPROG_REGIMENT:0 "この州ではすでにユニットを募集中です。"
- RECRUIT_SHIP:0 "この船を建造するには、ここをクリックしてください。"
+ RECRUIT_SHIP:0 "この船を建造するにはここをクリックしてください。"
  AFFORD_SHIP:0 "この船を買う余裕がありません。"
  INPROG_SHIP:0 "この州ではすでに船を建造中です。"
  CANNON:0 "大砲の数：$VALUE$"
@@ -2979,7 +2979,7 @@
  desc_the_mandate_of_heaven:0 "天命は正義と統治者を祝福して正当化し、それに反して支配しようとする者には苦難をもたらします。"
  the_mandate_of_heaven_lost:0 "天命の喪失"
  desc_the_mandate_of_heaven_lost:0 "人々は最早我々の統治者が天命を授かっているとは考えなくなります。"
- PDC_NOT_LOGGED_IN:0 "現在、Paradoxに接続されていません。\nここをクリックして接続します。"
+ PDC_NOT_LOGGED_IN:0 "現在、Paradoxに接続されていません。\n接続するにはここをクリックしてください。"
  PDC_LOGGED_IN:0 "現在、Paradoxに接続されていません。\n実績を確認するにはここをクリックして接続してください。"
  PDC_DESC:0 "Paradoxに接続することによって、あなたはゲーム内で得られる多くの実績にアクセスできます。接続するにはParadoxフォーラムのアカウントが必要です。"
  STARTDATE_GREATER_THAN:0 "ゲームは§Y$DATE$§W以後に開始されました。"
@@ -3705,10 +3705,10 @@
  REVOLUTION_WAR_NAME:0 "$ORDER$$FIRST$革命戦争"
  MODIFIER_REMOVED:1 "$WHAT|Y$は$WHERE$から削除されます。\n"
  OPENEDMARKET:0 "彼らは我々に対して市場を閉鎖しています。"
- AUTOSEND_PRIORITIES_SHORT:0 "クリックして商人の自動派遣の優先度を変更します。"
+ AUTOSEND_PRIORITIES_SHORT:0 "商人の自動派遣の優先度を変更するにはここをクリックしてください。"
  AUTOSEND_PRIORITIES_LONG:0 "それぞれの交易の中心地に対して、あなたは商人の自動派遣の優先度を設定できます。赤い十字は、商人が派遣されないことを示し、優先順位は3つのレベルに設定できます。赤は最も低く、黄色は中間の優先度、緑は優先度が高いことを示します。"
  LEDGER_SHORTCUT_LONG:0 "台帳の交易の中心地のページでは、すべての既知の交易の中心地の商人の管理を行うことができます。商人を手動で派遣したり、自動派遣の優先順位を付けたりすることができます。状況に応じて、自動派遣をオン/オフする追加のオプションもあります。"
- LEDGER_SHORTCUT_SHORT:0 "クリックして台帳の交易中心地のページに移動します"
+ LEDGER_SHORTCUT_SHORT:0 "台帳の交易中心地のページに移動するにはここをクリック"
  LEDGER_CLICK_TO_SEND_MERCHANT:0 "商人を派遣するため旗をクリック"
  LEDGER_CLICK_TO_SEND_MERCHANT2:0 "派遣できる商人がいません。"
  COTLEDGER_COT_AUTOSEND_S:0 "自動で商人を派遣"
@@ -3989,7 +3989,7 @@
  ALLIES_LOST:0 "§R同盟国は敗北しました§W"
  ALLIES_WON:0 "§G同盟国は勝利しました§W"
  WAR_OVERVIEW_SHORT:0 "戦争の概要"
- MOVE_CAPITAL_SHORT:0 "首都をこの州に移動するにはクリックをしてください。"
+ MOVE_CAPITAL_SHORT:0 "この州に遷都するにはここをクリックしてください。"
  MOVE_CAPITAL_SHORT_CORE:0 "ここは中核州ではないので遷都することはできません。"
  MOVE_CAPITAL_SHORT_COST:0 "この州に遷都することはできません。"
  MOVE_CAPITAL_LONG:0 "特に首都が攻撃されやすい場所にある場合、遷都すると有利になることがあります。"
@@ -7647,7 +7647,7 @@
  CONFIRMMOVETRADEPORTTEXT:0 "あなたはこの新しい場所に主要な交易首都を移しますか？これは、あなたの主な交易の収集地点がこの州に移動することを意味します。"
  CONFIRM_TRADE_COST:0 "コスト：§Y$AMOUNT$§W£dip"
  MOVE_TRADE_PORT_CURRENT:0 "あなたの交易首都です。ここであなたの交易を収集します。他のノードで交易を収集することもできますが、競争力は大幅に低下します。"
- MOVE_TRADE_PORT_SHORT:0 "クリックしてあなたの交易首都をこの州に移します。"
+ MOVE_TRADE_PORT_SHORT:0 "交易首都をこの州に移転するにはここをクリックしてください。"
  MOVE_TRADE_PORT_SHORT_CORE:0 "中核州ではないため、この州に交易首都を移すことはできません。"
  MOVE_TRADE_PORT_SHORT_COST:0 "この州に交易首都を移動することはできません。あなたは少なくとも$POWER$£dip£が必要です。"
  MOVE_TRADE_PORT_LONG:0 "あなたの交易首都を移動することは、新しいノードがより豊かで、あなたがそこでより多くの交易力を生成する能力を持っているなら、有利かもしれません。"
