Save/Update files [ci skip]

--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -3,10 +3,10 @@
  ai_handicap:0 "AIボーナス"
  player_handicap:0 "プレイヤーボーナス"
  FILTER:0 "フィルター"
- TO_ME:0 "自国に"
+ TO_ME:0 "自国に対して"
  FROM_ME:0 "自国から"
- INTERESTING:0 "関心ある国家"
- OTHERS:0 "その他国家"
+ INTERESTING:0 "関心ある国"
+ OTHERS:0 "他国"
  DECAY:0 "低減"
  SM_LANGUAGE:0 "言語"
  ENGLISH_SUPPORTED:0 "はい"
